# MameFormer

./: .env.example  .gitignore  README.md  infer.py  mameformer.py  pyproject.toml  test.txt  train.txt
checkpoints/: checkpoint_epoch_10.pth  checkpoint_epoch_100.pth  checkpoint_epoch_20.pth  checkpoint_epoch_30.pth  checkpoint_epoch_40.pth  checkpoint_epoch_50.pth  checkpoint_epoch_60.pth  checkpoint_epoch_70.pth  checkpoint_epoch_80.pth  checkpoint_epoch_90.pth
configs/: config.yaml
configs/experiment/: base.yaml
configs/model/: decoder.yaml
configs/training/: default.yaml
data/: 7test.txt
data/2/: test.txt  train.txt
data/5/: test.txt  train.txt
data/7/: train.txt
docs/: 2model.onnx  5model.onnx  7model.onnx  index.html  model.onnx
models/: 2model.pth  3model.pth  5model.pth  7model.pth
runs/Jan01_20-27-38_macbookpro.local/: events.out.tfevents.1767266858.macbookpro.local.12294.0
runs/Jan01_21-09-48_macbookpro.local/: events.out.tfevents.1767269388.macbookpro.local.15841.0
runs/Jan01_21-32-32_macbookpro.local/: events.out.tfevents.1767270752.macbookpro.local.17207.0
scripts/: Import-DotEnv.ps1  evaluate.py  generate.py  train.py
src/mameformer/: __init__.py
src/mameformer/data/: __init__.py  datasets.py  tokenizer.py
src/mameformer/inference/: __init__.py  checkpoint.py  export.py  predict.py
src/mameformer/models/: __init__.py  decoder.py
src/mameformer/training/: __init__.py  loops.py  tracking.py
src/mameformer/utils/: __init__.py  device.py  masks.py
