[project]
name = "ahotransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "numpy",
    "tensorboard",
    "onnx>=1.20.0",
    "onnxscript>=0.5.6",
]
optional-dependencies = { dev = ["pytest", "ruff"] }

[tool.uv.pip]
torch-backend = "auto"
